--- a/app/src/main/res/layout/found_fragment.xml
+++ b/app/src/main/res/layout/found_fragment.xml
@@ -4,9 +4,17 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Found" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="敬请期待!"
+            android:textSize="15sp"/>
+
+    </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
