--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -1,68 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:fitsSystemWindows="true">
 
-    <!--Toolbar-->
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_register"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/home_app_bar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:fitsSystemWindows="true"
-        app:navigationIcon="@drawable/return_logo"
-        app:title="游客注册"
-        app:titleTextColor="#666"
-        app:titleTextAppearance="@style/Toolbar.TitleText"/>
+        android:layout_height="73dp"
+        android:background="#5abce3"
+        android:fitsSystemWindows="true">
 
-    <EditText
-        android:id="@+id/userId_register"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="80dp"
-        android:background="@null"
-        android:drawableBottom="@drawable/line_et"
-        android:hint="账号"
-        android:textCursorDrawable="@drawable/cursor_et" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="38dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/return_3" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="30dp"
+                android:text="注册账号"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
+
+        </LinearLayout>
 
 
-    <EditText
-        android:id="@+id/password_one_register"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="20dp"
-        android:background="@null"
-        android:drawableBottom="@drawable/line_et"
-        android:hint="密码"
-        android:textCursorDrawable="@drawable/cursor_et"
-        android:inputType="textPassword"/>
+    </android.support.design.widget.AppBarLayout>
 
-    <EditText
-        android:id="@+id/password_two_register"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="20dp"
-        android:background="@null"
-        android:drawableBottom="@drawable/line_et"
-        android:hint="确认密码"
-        android:textCursorDrawable="@drawable/cursor_et"
-        android:inputType="textPassword"/>
+        android:layout_marginTop="150dp"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btn_register"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="25dp"
-        android:background="@drawable/login_btn"
-        android:text="注册" />
+        <EditText
+            android:id="@+id/userId_register"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="45dp"
+            android:layout_marginRight="45dp"
+            android:background="@null"
+            android:drawableLeft="@drawable/username_1"
+            android:drawableBottom="@drawable/line_et"
+            android:drawablePadding="20dp"
+            android:hint="账号"
+            android:textCursorDrawable="@drawable/cursor_et" />
 
-</LinearLayout>
+
+        <EditText
+            android:id="@+id/password_one_register"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="45dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="45dp"
+            android:background="@null"
+            android:drawableLeft="@drawable/password_1"
+            android:drawableBottom="@drawable/line_et"
+            android:drawablePadding="20dp"
+            android:hint="密码"
+            android:inputType="textPassword"
+            android:textCursorDrawable="@drawable/cursor_et" />
+
+        <EditText
+            android:id="@+id/password_two_register"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="45dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="45dp"
+            android:background="@null"
+            android:drawableLeft="@drawable/password_1"
+            android:drawableBottom="@drawable/line_et"
+            android:drawablePadding="20dp"
+            android:hint="确认密码"
+            android:inputType="textPassword"
+            android:textCursorDrawable="@drawable/cursor_et" />
+
+        <Button
+            android:id="@+id/btn_register"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginRight="40dp"
+            android:background="@drawable/login_btn"
+            android:text="立即注册"
+            android:textColor="#fff"
+            android:textSize="18sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="100dp"
+            android:text="* 良好的体验从注册开始" />
+
+    </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
