--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,85 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:fitsSystemWindows="true">
 
-    <!--Toolbar-->
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_login"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/home_app_bar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:fitsSystemWindows="true"
-        app:navigationIcon="@drawable/return_logo"
-        app:title="登入"
-        app:titleTextAppearance="@style/Toolbar.TitleText"
-        app:titleTextColor="#666" />
+        android:layout_height="73dp"
+        android:background="#5abce3"
+        android:fitsSystemWindows="true">
 
-    <EditText
-        android:id="@+id/et_userId_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="80dp"
-        android:background="@null"
-        android:drawableBottom="@drawable/line_et"
-        android:hint="账号"
-        android:singleLine="true"
-        android:textCursorDrawable="@drawable/cursor_et" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="38dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/return_3" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="30dp"
+                android:text="登入"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
+
+        </LinearLayout>
 
 
-    <EditText
-        android:id="@+id/et_password_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="20dp"
-        android:background="@null"
-        android:drawableBottom="@drawable/line_et"
-        android:hint="密码"
-        android:inputType="textPassword"
-        android:textCursorDrawable="@drawable/cursor_et" />
+    </android.support.design.widget.AppBarLayout>
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="40dp"
-        android:orientation="horizontal">
+        android:layout_marginTop="150dp"
+        android:orientation="vertical">
 
-        <RadioButton
-            android:id="@+id/rb_visitor_login"
+        <EditText
+            android:id="@+id/et_userId_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="45dp"
+            android:layout_marginRight="45dp"
+            android:background="@null"
+            android:drawableLeft="@drawable/username_1"
+            android:drawableBottom="@drawable/line_et"
+            android:drawablePadding="20dp"
+            android:hint="账号"
+            android:singleLine="true"
+            android:textCursorDrawable="@drawable/cursor_et" />
+
+
+        <EditText
+            android:id="@+id/et_password_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="45dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="45dp"
+            android:background="@null"
+            android:drawableLeft="@drawable/password_1"
+            android:drawableBottom="@drawable/line_et"
+            android:drawablePadding="20dp"
+            android:hint="密码"
+            android:inputType="textPassword"
+            android:textCursorDrawable="@drawable/cursor_et" />
+
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginRight="40dp"
+            android:background="@drawable/login_btn"
+            android:text="登入"
+            android:textColor="#fff"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/register_login_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:buttonTint="@color/colorPrimary"
-            android:checked="true"
-            android:text="游客端" />
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="230dp"
+            android:text="没有账号？选择注册"
+            android:textColor="#777"
+            android:textSize="15sp" />
 
-        <RadioButton
-            android:id="@+id/rb_manager_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
-            android:buttonTint="@color/colorPrimary"
-            android:text="管理员端" />
+    </LinearLayout>
 
-    </RadioGroup>
-
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/login_btn"
-        android:text="登入" />
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
