--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -21,14 +21,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
-                android:src="@drawable/return_3" />
+                android:src="@drawable/return_4" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="30dp"
                 android:text="登入"
-                android:textColor="#ffffff"
+                android:textColor="#000000"
                 android:textSize="20sp" />
 
         </LinearLayout>
@@ -81,7 +81,7 @@
             android:layout_marginRight="40dp"
             android:background="@drawable/login_btn"
             android:text="登入"
-            android:textColor="#fff"
+            android:textColor="#000000"
             android:textSize="18sp" />
 
         <TextView
