--- a/app/src/main/res/layout/viewpoint_item_adapter.xml
+++ b/app/src/main/res/layout/viewpoint_item_adapter.xml
@@ -24,7 +24,7 @@
 
     <LinearLayout
         android:id="@+id/box1_viewpoint"
-        android:layout_width="150dp"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@+id/image_scenery_box"
@@ -44,13 +44,12 @@
         <TextView
             android:id="@+id/address_scenery"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:singleLine="true"
+            android:layout_height="40dp"
             android:text="景点详细地址" />
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="30dp">
+            android:layout_height="25dp">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -92,32 +91,22 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/box1_viewpoint"
-        android:layout_weight="5"
-        android:orientation="vertical">
+    <TextView
+        android:id="@+id/detail_tv_viewpoint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="75dp"
+        android:layout_marginRight="2dp"
+        android:text="详情"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="温度"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="湿度"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="能见度"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="降雨"/>
-
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/detail_iv_viewpoint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/detail_1"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="87dp" />
 
     <View
         android:layout_width="match_parent"
