--- a/app/src/main/res/layout/scenery_item_adapter.xml
+++ b/app/src/main/res/layout/scenery_item_adapter.xml
@@ -18,7 +18,7 @@
             android:id="@+id/image_scenery"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/elephant_hill" />
+            android:src="@drawable/ci_qi_kou" />
 
     </android.support.v7.widget.CardView>
 
@@ -45,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="广西桂林象山景区"/>
+            android:text="景点详细位置"/>
 
         <LinearLayout
             android:layout_width="match_parent"
