--- a/app/src/main/res/layout/viewpoint_item_adapter.xml
+++ b/app/src/main/res/layout/viewpoint_item_adapter.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/item_selector">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/image_scenery_box"
+        android:id="@+id/image_viewpoint_box"
         android:layout_width="130dp"
         android:layout_height="100dp"
         android:layout_gravity="top"
@@ -15,7 +15,7 @@
         app:cardCornerRadius="5dp">
 
         <ImageView
-            android:id="@+id/image_scenery"
+            android:id="@+id/image_viewpoint"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/elephant_hill" />
@@ -27,12 +27,12 @@
         android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/image_scenery_box"
+        android:layout_toRightOf="@+id/image_viewpoint_box"
         android:layout_weight="5"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/name_scenery"
+            android:id="@+id/name_viewpoint"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:gravity="top"
@@ -42,14 +42,15 @@
             android:textSize="17dp" />
 
         <TextView
-            android:id="@+id/address_scenery"
+            android:id="@+id/address_viewpoint"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:text="景点详细地址" />
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="25dp">
+            android:layout_height="25dp"
+            android:layout_marginTop="2dp">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -58,7 +59,7 @@
                 android:src="@drawable/hot_viewpoint" />
 
             <TextView
-                android:id="@+id/number_scenery"
+                android:id="@+id/number_viewpoint"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
@@ -80,7 +81,7 @@
                 android:src="@drawable/distance_viewpoint" />
 
             <TextView
-                android:id="@+id/distance_scenery"
+                android:id="@+id/distance_viewpoint"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_marginLeft="5dp"
@@ -98,15 +99,15 @@
         android:layout_alignParentRight="true"
         android:layout_marginTop="75dp"
         android:layout_marginRight="2dp"
-        android:text="详情"/>
+        android:text="详情" />
 
     <ImageView
         android:id="@+id/detail_iv_viewpoint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/detail_1"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="87dp" />
+        android:layout_marginTop="87dp"
+        android:src="@drawable/detail_1" />
 
     <View
         android:layout_width="match_parent"
