--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="item_selected">#eee</color>
+    <color name="titleTextColor">#111</color>
     <color name="my_hint">#aaa</color>
     <color name="color_text_normal">#aaa</color>
     <color name="color_text_selected">#1296db</color>
