--- a/app/src/main/res/layout/viewpoint_item_adapter.xml
+++ b/app/src/main/res/layout/viewpoint_item_adapter.xml
@@ -56,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
-                android:src="@drawable/hot_viewpoint" />
+                android:src="@drawable/score_viewpoint" />
 
             <TextView
                 android:id="@+id/number_viewpoint"
@@ -64,7 +64,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="5"
-                android:text="300人次"
+                android:text="4.5分"
                 android:textSize="13dp" />
 
         </LinearLayout>
