--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,26 +87,26 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="230dp"
+            android:layout_height="200dp"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="150dp"
             android:layout_marginRight="10dp"
             android:background="@drawable/function_item_bg_selector"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/iv_camera"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:src="@drawable/photo3" />
+<!--            <ImageView-->
+<!--                android:id="@+id/iv_camera"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="0dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:src="@drawable/photo3" />-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="拍照识别"
-                android:textColor="#444"
-                android:textSize="9sp" />
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="拍照识别"-->
+<!--                android:textColor="#444"-->
+<!--                android:textSize="9sp" />-->
 
             <View
                 android:layout_width="match_parent"
