--- a/app/src/main/res/layout/viewpoint_item_adapter.xml
+++ b/app/src/main/res/layout/viewpoint_item_adapter.xml
@@ -18,6 +18,7 @@
             android:id="@+id/image_viewpoint"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scaleType="centerCrop"
             android:src="@drawable/elephant_hill" />
 
     </android.support.v7.widget.CardView>
